Fix for page current readability bug. Fixes Wonderboy III (yay\!). Misc debugging and vdp fixes.

--- a/miracle.css
+++ b/miracle.css
@@ -149,7 +149,7 @@ a.close_button {
 	float: left;
 }
 
-#vdp_registers {
+#vdp_registers, #pages {
     margin-top: 10px;
 }
 
